# ImGui-Vulkan-Setup

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
include/vksetup/: application.hh  assert.hh  logger.hh  singleton.hh  window.hh
include/vksetup/vulkan/: vulkan_context.hh
src/: application.cc  main.cc  vulkan_context.cc  window.cc
